--- a/frontend/app/templates/stocks.hbs
+++ b/frontend/app/templates/stocks.hbs
@@ -3,58 +3,88 @@
 		<div class="col-sm-12">
 			<h1>Stocks</h1>
 			{{liquid-outlet}}
-			<table class="table table-hover table-condensed text-center">
-				<thead>
-					<th {{action 'sortBy' 'code'}} class="text-center">Stock Code <span class="glyphicon" {{bind-attr class="codeUpDown"}}></span></th>
-					<th {{action 'sortBy' 'companyName'}} class="text-center">Company Name <span class="glyphicon" {{bind-attr class="companyNameUpDown"}}></span></th>
-					<th {{action 'sortBy' 'currentPrice'}} class="text-center">Current Price <span class="glyphicon" {{bind-attr class="currentPriceUpDown"}}></span></th>
-					<th {{action 'sortBy' 'pe'}} class="text-center">P/E <span class="glyphicon" {{bind-attr class="peUpDown"}}></span></th>
-					<th {{action 'sortBy' 'priceSales'}} class="text-center">P/S <span class="glyphicon" {{bind-attr class="priceSalesUpDown"}}></span></th>
-					<th {{action 'sortBy' 'eps'}} class="text-center">EPS <span class="glyphicon" {{bind-attr class="epsUpDown"}}></span></th>
-					<th {{action 'sortBy' 'totalCashPerShare'}} class="text-center">Cash holdings per Share <span class="glyphicon" {{bind-attr class="totalCashPerShareUpDown"}}></span></th>
-					<th {{action 'sortBy' 'bookValuePerShare'}} class="text-center">BVPS <span class="glyphicon" {{bind-attr class="bookValuePerShareUpDown"}}></span></th>
-					<th {{action 'sortBy' 'dividenYield'}} class="text-center">Dividen Yield <span class="glyphicon" {{bind-attr class="dividendYieldUpDown"}}></span></th>
-					<th {{action 'sortBy' 'profitMargin'}} class="text-center">Net Profit Margin <span class="glyphicon" {{bind-attr class="profitMarginUpDown"}}></span></th>
-					<th {{action 'sortBy' 'totalDebt'}} class="text-center">Debt <span class="glyphicon" {{bind-attr class="totalDebtUpDown"}}></span></th>
-					<th {{action 'sortBy' 'notes'}} class="text-center">Notes <span class="glyphicon" {{bind-attr class="notesUpDown"}}></span></th>
-					<th {{action 'sortBy' 'yearsDebt'}} class="text-center">Years to pay off Debt <span class="glyphicon" {{bind-attr class="yearsDebtUpDown"}}></span></th>
-					<th {{action 'sortBy' 'shares'}} class="text-center">Shares <span class="glyphicon" {{bind-attr class="sharesUpDown"}}></span></th>
-				</thead>
-				<tbody>
-					{{#each stock in this}}
-						<tr>
-							<td>${{stock.code}}</td>
-							<td>{{stock.companyName}}</td>
-							<td>{{stock.currentPrice}}</td>
-							<td>{{stock.pe}}</td>
-							<td>{{stock.priceSales}}</td>
-							<td>${{stock.eps}}</td>
-							<td>${{stock.totalCashPerShare}}</td>
-							<td>${{stock.bookValuePerShare}}</td>
-							<td>{{stock.dividendYield}}</td>
-							<td>{{stock.profitMargin}}%</td>
-							<td>${{stock.totalDebt}}</td>
-							<td>
-									<div class="col-xs-6 col-xs-offset-3">
-										{{input value=stock.notes class="form-control"}}
-									</div>
-							</td>
-							<td>{{stock.yearsDebt}}</td>
-							<td>{{stock.shares}}</td>
-							<th>
-								{{#if stock.isSaving}}
-									<p>saving...</p>
-								{{else}}	
-									{{#if stock.isDirty}}
-										<a href="#" {{action 'saveNote' stock}} class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span></a>
+			<div class="table-responsive">
+				<table class="table table-hover table-condensed text-center">
+					<thead>
+						<th {{action 'sortBy' 'code'}} class="text-center" {{bind-attr class="codeSH"}}>
+							Stock Code <span class="glyphicon" {{bind-attr class="codeUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'companyName'}} class="text-center">
+							Company Name <span class="glyphicon" {{bind-attr class="companyNameUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'currentPrice'}} class="text-center">
+							Current Price <span class="glyphicon" {{bind-attr class="currentPriceUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'pe'}} class="text-center">
+							P/E <span class="glyphicon" {{bind-attr class="peUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'priceSales'}} class="text-center">
+							P/S <span class="glyphicon" {{bind-attr class="priceSalesUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'eps'}} class="text-center">
+							EPS <span class="glyphicon" {{bind-attr class="epsUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'totalCashPerShare'}} class="text-center">
+							Cash holdings per Share <span class="glyphicon" {{bind-attr class="totalCashPerShareUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'bookValuePerShare'}} class="text-center">
+							BVPS <span class="glyphicon" {{bind-attr class="bookValuePerShareUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'dividenYield'}} class="text-center">
+							Dividen Yield <span class="glyphicon" {{bind-attr class="dividendYieldUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'profitMargin'}} class="text-center">
+							Net Profit Margin <span class="glyphicon" {{bind-attr class="profitMarginUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'totalDebt'}} class="text-center">
+							Debt <span class="glyphicon" {{bind-attr class="totalDebtUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'notes'}} class="text-center">
+							Notes <span class="glyphicon" {{bind-attr class="notesUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'yearsDebt'}} class="text-center">
+							Years to pay off Debt <span class="glyphicon" {{bind-attr class="yearsDebtUpDown"}}></span>
+						</th>
+						<th {{action 'sortBy' 'shares'}} class="text-center">
+							Shares <span class="glyphicon" {{bind-attr class="sharesUpDown"}}></span>
+						</th>
+					</thead>
+					<tbody>
+						{{#each stock in model}}
+							<tr>
+								<td>{{stock.code}}</td>
+								<td>{{stock.companyName}}</td>
+								<td>{{stock.currentPrice}}</td>
+								<td>{{stock.pe}}</td>
+								<td>{{stock.priceSales}}</td>
+								<td>${{stock.eps}}</td>
+								<td>${{stock.totalCashPerShare}}</td>
+								<td>${{stock.bookValuePerShare}}</td>
+								<td>{{stock.dividendYield}}</td>
+								<td>{{stock.profitMargin}}%</td>
+								<td>{{format-number stock.totalDebt precision=2}}</td>
+								<td>
+										<div class="col-xs-6 col-xs-offset-3">
+											{{input value=stock.notes class="form-control"}}
+										</div>
+								</td>
+								<td>{{stock.yearsDebt}}</td>
+								<td>{{stock.shares}}</td>
+								<th>
+									{{#if stock.isSaving}}
+										<p>saving...</p>
+									{{else}}	
+										{{#if stock.isDirty}}
+											<a href="#" {{action 'saveNote' stock}} class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span></a>
+										{{/if}}
 									{{/if}}
-								{{/if}}
-								<a href="#" {{action 'delete' stock}} class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
-							</th>
-						</tr>
-					{{/each}}
-				</tbody>
-			</table>
+									<a href="#" {{action 'delete' stock}} class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
+								</th>
+							</tr>
+						{{/each}}
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 </div>
