uppercase fix in Add stock

--- a/frontend/app/templates/stocks/new.hbs
+++ b/frontend/app/templates/stocks/new.hbs
@@ -2,7 +2,7 @@
 	<div class="form-group" {{bind-attr class="classError"}}>
 		<label for="code" class="control-label sr-only">Symbol:</label>
 		<div class="col-sm-4">
-		{{input value=code class="form-control" id="code" placeholder="Enter stock Symbol"}}
+		{{input value=code class="form-control text-uppercase" id="code" placeholder="Enter stock Symbol"}}
 		<p class="help-block">{{errorMessage}}</p>
 	</div>
 	<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span></button>
