--- a/frontend/app/templates/stocks.hbs
+++ b/frontend/app/templates/stocks.hbs
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="row">
-        <div class="col-xs-1">
+        <div class="col-xs-4 col-sm-2">
           <h1>Stocks</h1>
         </div>
-        <div class="col-xs-11">
+        <div class="col-xs-8 col-sm-10">
           {{liquid-outlet}}
         </div>
       </div>
@@ -164,20 +164,50 @@
                 <td {{bind-attr class="codeVisible::hidden"}}>{{stock.code}}</td>
                 <td {{bind-attr class="companyNameVisible::hidden"}}>{{stock.companyName}}</td>
                 <td {{bind-attr class="currentPriceVisible::hidden"}}>{{stock.currentPrice}}</td>
-                <td {{bind-attr class="peVisible::hidden"}}>{{stock.pe}}</td>
-                <td {{bind-attr class="priceSalesVisible::hidden"}}>{{stock.priceSales}}</td>
+                <td {{bind-attr class="peVisible::hidden"}}>
+                  {{#if stock.pe}}
+                    {{stock.pe}}
+                  {{else}}
+                    -
+                  {{/if}}
+                </td>
+                <td {{bind-attr class="priceSalesVisible::hidden"}}>
+                  {{#if stock.priceSales}}
+                    {{stock.priceSales}}
+                  {{else}}
+                    -
+                  {{/if}}
+                </td>
                 <td {{bind-attr class="epsVisible::hidden"}}>${{stock.eps}}</td>
                 <td {{bind-attr class="totalCashPerShareVisible::hidden"}}>${{stock.totalCashPerShare}}</td>
                 <td {{bind-attr class="bookValuePerShareVisible::hidden"}}>${{stock.bookValuePerShare}}</td>
-                <td {{bind-attr class="dividendYieldVisible::hidden"}}>{{stock.dividendYield}}</td>
-                <td {{bind-attr class="profitMarginVisible::hidden"}}>{{stock.profitMargin}}%</td>
-                <td {{bind-attr class="totalDebtVisible::hidden"}}>{{format-number stock.totalDebt precision=2}}</td>
+                <td {{bind-attr class="dividendYieldVisible::hidden"}}>
+                  {{#if stock.dividendYield}}
+                    {{stock.dividendYield}}%
+                  {{else}}
+                    -
+                  {{/if}}
+                </td>
+                <td {{bind-attr class="profitMarginVisible::hidden"}}>
+                  {{#if stock.profitMargin}}
+                    {{stock.profitMargin}}%
+                  {{else}}
+                    -
+                  {{/if}}
+                </td>
+                <td {{bind-attr class="totalDebtVisible::hidden"}}>{{format-number stock.totalDebt precision=0}}</td>
                 <td {{bind-attr class="notesVisible::hidden"}}>
                     <div class="col-xs-6 col-xs-offset-3">
                       {{input value=stock.notes class="form-control"}}
                     </div>
                 </td>
-                <td {{bind-attr class="yearsDebtVisible::hidden"}}>{{stock.yearsDebt}}</td>
+                <td {{bind-attr class="yearsDebtVisible::hidden"}}>
+                 {{#if stock.yearsDebt}}
+                    {{stock.yearsDebt}}
+                  {{else}}
+                    0
+                  {{/if}}
+                </td>
                 <td {{bind-attr class="sharesVisible::hidden"}}>{{stock.shares}}</td>
                 <th>
                   {{#if stock.isSaving}}
