--- a/frontend/app/templates/stocks/new.hbs
+++ b/frontend/app/templates/stocks/new.hbs
@@ -2,11 +2,15 @@
 <form {{action "save" stock on="submit"}} role="form">
 	<div class="form-group" {{bind-attr class="classError"}}>
 		<label for="code" class="control-label sr-only">Symbol:</label>
-		<div class="col-sm-4">
-		{{input value=code class="form-control text-uppercase" id="code" placeholder="Enter stock Symbol"}}
-		<p class="help-block">{{errorMessage}}</p>
-	</div>
-	<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span></button>
-	<button {{action "cancel"}} class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></button>
+		<div class="row">
+			<div class="col-sm-9">
+				{{input value=code class="form-control text-uppercase" id="code" placeholder="Enter stock Symbol"}}
+				<p class="help-block">{{errorMessage}}</p>
+			</div>
+			<div class="col-sm-3">
+				<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span></button>
+				<button {{action "cancel"}} class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></button>
+			</div>
+		</div>
 </form>
 {{outlet}}
